# ddu

./: .env  README.md  README_cn.md  app.vue  eslint.config.js  eslint.config.mjs  eslint.config.ts  index.html  main.html  nuxt.config.ts  package.json  pnpm-lock.yaml  preview.html  setting.html  startup.html  tsconfig.json  uno.config.ts  vite.config.ts
.github/workflows/: publish.yml  release.yml
.nuxt/: components.d.ts  imports.d.ts  nitro.json  nuxt.d.ts  nuxt.json  tsconfig.json  tsconfig.server.json
.nuxt/dev/: index.mjs  index.mjs.map
.nuxt/manifest/: latest.json
.nuxt/types/: i18n-plugin.d.ts  imports.d.ts  layouts.d.ts  (+5 more)
assets/: blueprintexcalidraw.excalidraw
components/: AutoStart.vue  DirectorySelector.vue  Greet.vue  PictureReview.vue  Screenshot.vue
docs/: README.md  outline.md  research.md
pages/: index.vue
public/: main.html  preview.html  setting.html  startup.html
specs/: 01-capture-engine.md  02-editor-annotation.md  03-history-workflow.md  04-ocr-privacy-ai.md  05-sharing-export-integrations.md  06-screen-recording.md  07-settings-platform-packaging.md
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: autostart.json  clipboard.json  default.json  desktop.json  dialog.json  filesystem.json  global-shortcut.json  os.json  window.json
src-tauri/src/: common.rs  constants.rs  global_shortcut.rs  lib.rs  main.rs  menu.rs  scrapshot.rs  screenshot.rs  screenshots.rs  window.rs  windows.rs  xcap_utils.rs
src-tauri/src/cmd/: common.rs  diagnostics.rs  export.rs  history.rs  mod.rs  ocr.rs  preview.rs  recording.rs  screenshot.rs  window.rs  workflow.rs  xcreenshot.rs
src-tauri/src/platform/: mac.rs
src-tauri/src/platform/mac/: screenshot.rs  window.rs
styles/: global.css
(+42 files in other folders)
