[package]
name = "ddu"
version = "0.1.9"
description = "Ddu screenshot tool"
authors = [ "ayac3j@gmail.com" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ddu_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2.6", features = [ "config-json5" ] }

[dependencies]
tauri = { version = "2.11", features = [
  "macos-private-api",
  "protocol-asset",
  "config-json5",
  "tray-icon",
] }
tauri-plugin-shell = "2.3"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
chrono = "0.4"
anyhow = "1"
tauri-plugin-dialog = "2.7"
tauri-plugin-fs = "2.5"
tauri-plugin-clipboard-manager = "2.3"
scrap = "0.5"
strum_macros = "0.26"
strum = "0.26"
image = "0.25"
tauri-plugin-store = "2.4"
xcap = "0.9"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
tracing = "0.1"
tauri-plugin-os = "2.3"
core-foundation = "0.10"
libc = "0.2"
base64 = "0.22"
image_compressor = "1.5"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.5"
tauri-plugin-global-shortcut = "2.3"
tauri-plugin-positioner = { version = "2.3", features = [ "tray-icon" ] }
tauri-plugin-window-state = "2.4"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.25"
